added shopping & recipe edit

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,15 +1,16 @@
 <div class="row">
     <div class="col-xs-12">
-        <img [src]="recipe.imagePath" style="max-height: 300px;"  alt="{{ recipe.name}}" class="img-responsive">
+        <img [src]="recipe?.imagePath" style="max-height: 300px;"  alt="{{ recipe?.name}}" class="img-responsive">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>{{ recipe.name}}</h1>
+        <h1>{{ recipe?.name}}</h1>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
+        <!-- <div class="btn-group open">
         <button class="btn btn-primary dropdown-toggle">
             Manage Recipe <span class="caret"></span>
         </button>
@@ -18,15 +19,30 @@
             <li><a href="#">Edit Recipe</a></li>
             <li><a href="#">Delete Recipe</a></li>
         </ul>
+    </div> -->
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Manage Recipe
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <li><a style="cursor: pointer;" >To Shopping List</a></li>
+            <li><a (click)="onEditRecipe()" style="cursor: pointer;">Edit Recipe</a></li>
+            <li><a style="cursor: pointer;">Delete Recipe</a></li>
+        </div>
+      </div>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        {{ recipe.description}}
+        {{ recipe?.description}}
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Ingredients
+        <ul class="list-group">
+            <li class="list-group-item" *ngFor="let ingredient of recipe?.ingredients">
+                {{ingredient?.name }} -- {{ingredient?.amount}}
+            </li>
+        </ul>
     </div>
 </div>
