--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,24 +6,21 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" (click)="onSelect('recipe')" href="#">Recipes </a>
+      <li routerLinkActive="active" class="nav-item ">
+        <a class="nav-link" routerLink="/recipes" >Recipes </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="onSelect('shopping-list')" href="#">Shopping List</a>
+      <li outerLinkActive="active" class="nav-item">
+        <a class="nav-link" routerLink="/shopping-list" >Shopping List</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Manage
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Save Data</a>
-          <a class="dropdown-item" href="#">Fetch Data</a>
-         
+          <a style="cursor: pointer;" class="dropdown-item" >Save Data</a>
+          <a style="cursor: pointer;" class="dropdown-item" >Fetch Data</a>
         </div>
       </li>
-      
-    </ul>
-   
+    </ul>  
   </div>
 </nav>
