--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,13 +1,11 @@
+<div class="container">
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
+        <app-recipe-list ></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail *ngIf="selectedRecipe; else infoText"
-        [recipe]="selectedRecipe"
-        ></app-recipe-detail>   
-       <ng-template #infoText>
-        <p>Please select recipe</p>
-       </ng-template>
+        <!-- <app-recipe-edit></app-recipe-edit> -->
+       <router-outlet></router-outlet>
     </div>
+</div>
 </div>
