--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -37,12 +37,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <!-- <div class="col-md-12" fromArrayName="ingredients">
+            <!-- <div class="row">
+                <div class="col-md-12" fromArrayName="ingredients">
                    
                     <div class="row"  
-                    *ngFor="let ingredientCtrl of recipeForm.get('ingredients'); let i = index" 
-                    [fromGroupName]="i">
+                    *ngFor="let ingredientCtrl of recipeForm.get('ingredients'); let i = index" [formGroupName]="i" >
                         <div class="col-xs-8">
                             <input type="text"  class="form-control" formControlName="name">  
                         </div>
@@ -53,8 +52,47 @@
                             <button class="btn btn-danger">x</button>  
                         </div>
                     </div>
-                </div> -->
-            </div>
+                </div>
+            </div> -->
+            <div class="row">
+                <div class="col-xs-12" formArrayName="ingredients">
+                    <!-- {{ recipeForm.get('ingredients')| json}} -->
+                  <div
+                    class="row"
+                    *ngFor="let ingredientCtrl of AddTypeArray()['controls']; let i = index"
+                    [formGroupName]="i"
+                    style="margin-top: 10px;">
+                    <div class="col-xs-8">
+                      <input
+                        type="text"
+                        class="form-control"
+                        formControlName="name">
+                    </div>
+                    <div class="col-xs-2">
+                      <input
+                        type="number"
+                        class="form-control"
+                        formControlName="amount">
+                    </div>
+                    <div class="col-xs-2">
+                      <button
+                        type="button"
+                        class="btn btn-danger"
+                        >X</button>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <button
+                        type="button"
+                        class="btn btn-success"
+                        (click)="onAddIngredient()"
+                        >Add Ingredient</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </form>
     </div>
 </div>
