--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -27,7 +27,7 @@
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <li><a style="cursor: pointer;" >To Shopping List</a></li>
             <li><a (click)="onEditRecipe()" style="cursor: pointer;">Edit Recipe</a></li>
-            <li><a style="cursor: pointer;">Delete Recipe</a></li>
+            <li><a (click)="onDeleteRecipe()" style="cursor: pointer;">Delete Recipe</a></li>
         </div>
       </div>
     </div>
