--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,11 +3,11 @@
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button type="submit" class="btn btn-success">Save</button>
-                    <button type="submit" class="btn btn-danger">Cancel</button>
+                    <button type="submit" [disabled]="!recipeForm.valid" class="btn btn-success">Save</button>
+                    <button type="button" (click)="onCancel()" class="btn btn-danger">Cancel</button>
                 </div>
             </div>
-         
+
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
@@ -20,79 +20,48 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="name">Image URL</label>
-                        <input type="text" id="imagePath" class="form-control" formControlName="imagePath">
+                        <input type="text" id="imagePath" class="form-control" formControlName="imagePath" #imagePath>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <img src="" class="img-responsive">
+                    <img [src]="imagePath.value" style="max-height: 300px;" class="img-responsive">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="name">Description</label>
-                       <textarea rows="6" formControlName="description"></textarea>
+                        <textarea rows="6" formControlName="description"></textarea>
                     </div>
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="col-md-12" fromArrayName="ingredients">
-                   
-                    <div class="row"  
-                    *ngFor="let ingredientCtrl of recipeForm.get('ingredients'); let i = index" [formGroupName]="i" >
-                        <div class="col-xs-8">
-                            <input type="text"  class="form-control" formControlName="name">  
-                        </div>
-                        <div class="col-xs-2">
-                            <input type="number"  class="form-control" formControlName="amount">  
-                        </div>
-                        <div class="col-xs-2">
-                            <button class="btn btn-danger">x</button>  
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+
             <div class="row">
                 <div class="col-xs-12" formArrayName="ingredients">
                     <!-- {{ recipeForm.get('ingredients')| json}} -->
-                  <div
-                    class="row"
-                    *ngFor="let ingredientCtrl of AddTypeArray()['controls']; let i = index"
-                    [formGroupName]="i"
-                    style="margin-top: 10px;">
-                    <div class="col-xs-8">
-                      <input
-                        type="text"
-                        class="form-control"
-                        formControlName="name">
+                    <div class="row" *ngFor="let ingredientCtrl of AddTypeArray()['controls']; let i = index"
+                        [formGroupName]="i" style="margin-top: 10px;">
+                        <div class="col-xs-8">
+                            <input type="text" class="form-control" formControlName="name">
+                        </div>
+                        <div class="col-xs-2">
+                            <input type="number" class="form-control" formControlName="amount">
+                        </div>
+                        <div class="col-xs-2">
+                            <button type="button" (click)="onDeleteIngredient(i)" class="btn btn-danger">X</button>
+                        </div>
                     </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="number"
-                        class="form-control"
-                        formControlName="amount">
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add
+                                Ingredient</button>
+                        </div>
                     </div>
-                    <div class="col-xs-2">
-                      <button
-                        type="button"
-                        class="btn btn-danger"
-                        >X</button>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-xs-12">
-                      <button
-                        type="button"
-                        class="btn btn-success"
-                        (click)="onAddIngredient()"
-                        >Add Ingredient</button>
-                    </div>
-                  </div>
                 </div>
-              </div>
+            </div>
         </form>
     </div>
 </div>
